--- a/index.html
+++ b/index.html
@@ -2,49 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-    <style>
-      .bg {
-        opacity: 0.5;
-      }
-      .col {
-        border: 1px solid black;
-      }
-      .test {
-        display: flex;
-        justify-content: center;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
+    <title>Login Form UI Design</title>
   </head>
-  <body>
-    <div class="bg d-flex justify-content-center">
-      <img src="login/user.png" alt="test" />
-    </div>
-    <div class="test">
-      <button type="button" class="btn btn-primary">Primary</button>
-    </div>
 
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-sm-6">col-md-6</div>
-        <div class="col">2 of 2</div>
+  <body>
+    <section>
+      <div class="box">
+        <div class="form">
+          <h2>Login</h2>
+
+          <form action="#">
+            <div class="inputBx">
+              <input type="text" placeholder="Username" />
+              <img src="user.png" alt="user-icon" />
+            </div>
+
+            <div class="inputBx">
+              <input type="password" placeholder="Password" />
+              <img src="lock.png" alt="lock-icon" />
+            </div>
+
+            <label class="remember">
+              <input type="checkbox" /> Remember Me
+            </label>
+            <div class="inputBx">
+              <input type="submit" value="Login" />
+            </div>
+          </form>
+
+          <p>Forget <a href="#">Password</a></p>
+          <p>Need an <a href="#">Account</a></p>
+        </div>
       </div>
-      <div class="row">
-        <div class="col">1 of 3</div>
-        <div class="col">2 of 3</div>
-        <div class="col">3 of 3</div>
-      </div>
-    </div>
+    </section>
   </body>
 </html>
